# INF2475-DeepLearning

./: .gitignore  README.md  pyproject.toml
.agents/rules/: commit-rules.md
data/C-ORAL-ESQ/c-oral-esq_txt/: besqau01.txt  besqau02.txt  besqau03.txt  besqau04.txt  besqau05.txt  besqau06.txt  besqau07.txt  besqau08.txt  besqau09.txt  besqau10.txt  besqau11.txt  besqau12.txt  besqau13.txt  besqau14.txt  besqau15.txt  besqau16.txt  besqau17.txt  besqau18.txt  besqau19.txt  besqau20.txt  besqau21.txt  besqau22.txt  besqau23.txt  besqau24.txt  besqmm25.txt  besqmm26.txt  besqmm27.txt  besqmm28.txt  besqmm29.txt  besqmm30.txt  besqmm31.txt  besqmm32.txt  besqmm33.txt  besqmm34.txt  besqmm35.txt  besqmm36.txt  besqmm37.txt  besqmm38.txt  besqmm39.txt  besqmm40.txt  (+3 more)
docs/: plano_projeto.md  project_context.md  soap_format.md  uv_guide.md
notebooks/: 1_preprocessamento.ipynb  2_inferencia_benchmark.ipynb
research/: .env.example  README.md  requirements.txt  run_search.py
research/results/: combined_results.bib  combined_results.json  query_1_medical_telehealth_pt.bib  query_1_medical_telehealth_pt.json  query_2_meeting_videoconference_pt.json  query_3_conversational_spontaneous_pt.bib  query_3_conversational_spontaneous_pt.json  relevant_papers.json
src/evaluation/: metrics.py
src/preprocessing/: audio.py  parser.py  text.py
tests/: test_evaluation.py  test_preprocessing.py
