[project]
name = "consultaai-soap"
version = "0.1.0"
description = "INF2475 Intro to Deep Learning Final Project 2026/1"
readme = "README.md"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
